--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script> -->
-		<script type="module" src="./src/main.js"></script>
-
+		<script type="module" src="./src/main.ts"></script>
 	</head>
 	<body>
 		<div id="app"></div>
